--- a/templating_demo/views/partials/head.ejs
+++ b/templating_demo/views/partials/head.ejs
@@ -4,14 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/bootstrap.min.css" />
+    <script src="/js/bootstrap.min.js"></script>
     <title>Document</title>
   </head>
-  <body>
-    <h1>Your random number is <%= num %></h1>
-    <% if(num % 2 === 0) {%>
-    <h2>This is an even number</h2>
-    <% } else {%>
-    <h2>This is an odd number</h2>
-    <% } %>
-  </body>
 </html>
+<body>
