--- a/restdemo/views/comments/new.ejs
+++ b/restdemo/views/comments/new.ejs
@@ -30,5 +30,6 @@
             </section>
             <button type="submit">Submit</button>
         </form>
+        <a href="/comments">Back_to_Comments</a>
     </body>
 </html>
