--- a/Mongoose_Express/views/products/new.ejs
+++ b/Mongoose_Express/views/products/new.ejs
@@ -15,9 +15,9 @@
     <input type="number" step="any" id="price" name="price" placeholder="price">
     <label for="category">Category</label>
     <select name="category" id="category">
-      <option value="fruit">fruit</option>
-      <option value="vegetable">vegetable</option>
-      <option value="dairy">dairy</option>
+      <% for(category of categories) {%>
+      <option value="<%= category %>"><%= category %></option>
+      <% } %>
     </select>
     <button>Save</button>
   </form>
