--- a/Mongoose_Express/views/products/show.ejs
+++ b/Mongoose_Express/views/products/show.ejs
@@ -12,6 +12,11 @@
     <p>Price: <%= product.price %></p>
     <p>Category: <%= product.category %></p>
     <br>
+    <a href="/products/<%= product._id %>/edit">Edit product</a>
     <a href="/products">Back_to_index</a>
+    <br>
+    <form action="/products/<%= product._id %>?_method=DELETE" method="post">
+      <button>Delete</button>
+    </form>
 </body>
 </html>
